# concaveman-cpp

./: .gitignore  CMakeLists.txt  conanfile.txt
.github/workflows/: pr.yml
src/main/cpp/include/concaveman-cpp/: concaveman.h
src/test/cpp/: test_concaveman.cpp
